--- a/_posts/2018-10-23-kipr-1.markdown
+++ b/_posts/2018-10-23-kipr-1.markdown
@@ -15,62 +15,63 @@ tags:
 
 Как оказалось, некоторые личности считают Кипр частью Греции. Это не так. Кипр — осколок эллинистической цивилизации, бывшая английская колония, а ныне — остров двух государств: [Республика Кипр](https://ru.wikipedia.org/wiki/Республика_Кипр) на Юге и [Турецкая Республика Северного Кипра](https://ru.wikipedia.org/wiki/Турецкая_Республика_Северного_Кипра) — на Севере. Между этими государствами — пропасть (и буферная зона ООН).
 
-<figure class="kg-card kg-image-card kg-width-wide kg-card-hascaption">![](/assets/images/2018/10/DSCF8901-1.jpg)<figcaption>Пляжная полоса Лимасола</figcaption>
+![Пляжная полоса Лимасола](/assets/images/2018/10/DSCF8901-1.jpg)
 
 Южный Кипр, который и путают с Грецией, действительно мало отличается от Эллады. Он говорит на греческом, кушает гиросы, входит в Евросоюз и принимает Евро. Расположен у побережья Малой Азии — между Турцией, Сирией, Ливией и Израилем. О колониальном прошлом напоминают несколько британских военных баз и прекрасный английский язык, которым владеют даже в деревнях.
 
-<figure class="kg-card kg-image-card kg-width-wide kg-card-hascaption">![](/assets/images/2018/10/DSCF9042.jpg)<figcaption>Закат на Кипре</figcaption>
+![Закат на Кипре](/assets/images/2018/10/DSCF9042.jpg)
 
 Заехать на Кипр можно без шенгена. Местную провизу оформляют бесплатно на [сайте](http://www.mfa.gov.cy/mfa/Embassies/embassy_moscow.nsf/All/F316813FF1591923C2257E5A002C1D7B?OpenDocument) посольства всего за пару часов. Максимальный срок для туриста — 90 дней. По шенгену тоже пустят, но только если он уже открыт в другой стране ЕС.
 
-<figure class="kg-card kg-image-card kg-width-wide kg-card-hascaption">![](/assets/images/2018/10/DSCF9029-1.jpg)<figcaption>Поля неподалёку от Ларнаки</figcaption>
+![Поля неподалёку от Ларнаки](/assets/images/2018/10/DSCF9029-1.jpg)
 
 Мы были на Кипре в январе и в конце августа. Как ни странно, в январе понравилось больше. Искупаться и прилечь в это время можно разве что в ванне, зато почти нет туристов, воздух пахнет спелыми апельсинами, а температура у побережья — 15–20 градусов. Зимовка на Кипре — идеальный способ сбежать от мрачной московской зимы.
 
-<figure class="kg-card kg-gallery-card kg-width-wide kg-card-hascaption"><div class="kg-gallery-container">
-<div class="kg-gallery-image">![](/assets/images/2018/10/DSCF9718-3.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/10/2592524B-C2AE-448E-89E7-E970024D92CC-2.JPG)
+<div class="img-gallery>
+![](/assets/images/2018/10/DSCF9718-3.jpg)
+![](/assets/images/2018/10/2592524B-C2AE-448E-89E7-E970024D92CC-2.JPG)
+<div>
 
 <figcaption>Январь на Кипре</figcaption>
 
 В августе — сентябре знойно и душно — около 35 градусов. Курортные пляжи забиты так, что в море можно попасть только по скользким жопам (преимущественно русским). Зато в конце лета дозревает виноград, проходят винные фестивали и тусовки другого рода.
 
-<figure class="kg-card kg-gallery-card kg-width-wide kg-card-hascaption"><div class="kg-gallery-container">
-
-<div class="kg-gallery-image">![](/assets/images/2018/10/DSCF5369-1.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/10/DSCF5382-1.jpg)
 
 
-<div class="kg-gallery-image">![](/assets/images/2018/10/DSCF5603.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/10/DSCF5661.jpg)
+![](/assets/images/2018/10/DSCF5369-1.jpg)
+![](/assets/images/2018/10/DSCF5382-1.jpg)
+
+
+![](/assets/images/2018/10/DSCF5603.jpg)
+![](/assets/images/2018/10/DSCF5661.jpg)
 
 
 <figcaption>Сентябрьский фестиваль вина и мототриал в Лимасоле</figcaption>
 
 Кроме курортных пляжей, остров знаменит офшорами и мягким бизнес-климатом. Есть мнение, что финансовых институций и брокерских контор здесь больше, чем продовольственных магазинов. &nbsp;Со связью, как на любом острове, всё плохо. Публичные вайфай-точки работают мучительно медленно, а мобильный интернет настолько дорогой, что даже местные им почти не пользуются.
 
-<figure class="kg-card kg-image-card kg-width-wide kg-card-hascaption">![](/assets/images/2018/10/DSCF8599.jpg)<figcaption>Без интернета даже лучше</figcaption>
+![Без интернета даже лучше](/assets/images/2018/10/DSCF8599.jpg)
 
 На острове живёт около 800 000 человек. Вторая по численности этническая группа — русские — их здесь около 5%. В городе Лимасоле их больше 10%, не считая тех, кто каждые полгода приезжает на 90 дней по турвизе, как на дачу. Вместе с дачниками, по ощущениям, русских в Лимасольске 20-30%.
 
-<figure class="kg-card kg-gallery-card kg-width-wide kg-card-hascaption"><div class="kg-gallery-container">
-<div class="kg-gallery-image">![](/assets/images/2018/10/DSCF8813-1.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/10/IMG_7178-1.jpeg)
+
+![](/assets/images/2018/10/DSCF8813-1.jpg)
+![](/assets/images/2018/10/IMG_7178-1.jpeg)
 
 <figcaption>Русские отмечают Новый год на Кипре</figcaption>
 
 Третья по численности этническая группа — кошки. Их здесь уважают и кормят, поэтому вся набережная на 30% состоит из кошек, а пляжный песок — из зарытых котячьих какашек. Даже форма острова напоминает силуэт кота (но это я только что выдумал).
 
-<figure class="kg-card kg-gallery-card kg-width-wide kg-card-hascaption"><div class="kg-gallery-container">
-<div class="kg-gallery-image">![](/assets/images/2018/10/IMG_0352.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/10/IMG_7101.jpeg)
-<div class="kg-gallery-image">![](/assets/images/2018/10/DSCF8818.jpg)
+
+![](/assets/images/2018/10/IMG_0352.jpg)
+![](/assets/images/2018/10/IMG_7101.jpeg)
+![](/assets/images/2018/10/DSCF8818.jpg)
 
 <figcaption>Хороший, плохой, злой</figcaption>
 
 Ценник на жильё зависит от сезона. Зимой можно снять отличные апарты в 10 метрах от пляжа за 500€ в месяц. Летом придётся напрячься, чтобы найти что-то пристойное на третьей береговой линии в пределах 1000€. Цены в ресторанах вполне европейские, в магазинах — московские. Проезд на автобусе — 1.5€. Вино — от 3€.
 
-<figure class="kg-card kg-image-card kg-width-wide kg-card-hascaption">![](/assets/images/2018/10/DSCF5727.jpg)<figcaption>Элитная недвижимость в Лимасольске</figcaption>
+![Элитная недвижимость в Лимасольске](/assets/images/2018/10/DSCF5727.jpg)
 
 Самые крупные города Южного Кипра: [Никосия](https://ru.wikipedia.org/wiki/Никосия), [Лимасол](https://ru.wikipedia.org/wiki/Лимасол), [Пафос](https://ru.wikipedia.org/wiki/Пафос_(Кипр)), [Ларнака](https://ru.wikipedia.org/wiki/Ларнака), [Айия-Напа](https://ru.wikipedia.org/wiki/Айия-Напа) и всё. Остальное — городские агломерации или деревни. До всех городов можно (и стоит) добраться автобусом — это обойдётся в 5-10€ на человека и 1–2 часа времени. Посмотреть таймтейбл и цены можно на специальном [сайте](http://www.cyprusbybus.com/).
 
@@ -82,18 +83,18 @@ tags:
 
 Город находится в центре острова, далеко от моря и туристов. Здесь много машин, офисов и магазинов, а достопримечательностей — мало. Разве что древняя венецианская фортеция, обрамляющая исторический центр города, но смотреть на её лучистый обрис гораздо интереснее с [гуглмапс](https://goo.gl/maps/pafK8mbcJm52), нежели вблизи.
 
-<figure class="kg-card kg-image-card kg-width-wide kg-card-hascaption">![](/assets/images/2018/10/Screenshot-2018-10-23-at-20.13.51-2.jpg)<figcaption>Периметр венецианских крепостных стен вокруг Никосии</figcaption>
+![Периметр венецианских крепостных стен вокруг Никосии](/assets/images/2018/10/Screenshot-2018-10-23-at-20.13.51-2.jpg)
 
 Для прогулки по историческому центру достаточно часа. Потом можно отправиться через пеший чекпоинт в турецкую часть города — Лефкошу. Для этого не нужны специальные разрешения и визы. Достаточно загранпаспорта и желания.
 
-<figure class="kg-card kg-gallery-card kg-width-wide kg-card-hascaption"><div class="kg-gallery-container">
-
-<div class="kg-gallery-image">![](/assets/images/2018/10/DSCF8774.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/10/DSCF8788.jpg)
 
 
-<div class="kg-gallery-image">![](/assets/images/2018/10/DSCF8790.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/10/DSCF8800.jpg)
+![](/assets/images/2018/10/DSCF8774.jpg)
+![](/assets/images/2018/10/DSCF8788.jpg)
+
+
+![](/assets/images/2018/10/DSCF8790.jpg)
+![](/assets/images/2018/10/DSCF8800.jpg)
 
 
 <figcaption>Север Никосии (Лефкоша) — турецкая часть города</figcaption>
@@ -104,48 +105,48 @@ tags:
 
 А вот ехать в Никосию за отдыхом — плохая идея, да и жить там как-то суетно. Поэтому на Кипре есть второй по величине город Лимасол, который расположен на побережье и держит баланс между курортным отдыхом и урбанистическими удовольствиями.
 
-<figure class="kg-card kg-gallery-card kg-width-wide kg-card-hascaption"><div class="kg-gallery-container">
-
-<div class="kg-gallery-image">![](/assets/images/2018/10/DSCF9824.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/10/DSCF9249.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/10/DSCF8652.jpg)
 
 
-<div class="kg-gallery-image">![](/assets/images/2018/10/DSCF8933-1.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/10/DSCF9226-1.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/10/DSCF8894-1.jpg)
+![](/assets/images/2018/10/DSCF9824.jpg)
+![](/assets/images/2018/10/DSCF9249.jpg)
+![](/assets/images/2018/10/DSCF8652.jpg)
 
 
-<div class="kg-gallery-image">![](/assets/images/2018/10/DSCF9721.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/10/DSCF5140.jpg)
+![](/assets/images/2018/10/DSCF8933-1.jpg)
+![](/assets/images/2018/10/DSCF9226-1.jpg)
+![](/assets/images/2018/10/DSCF8894-1.jpg)
+
+
+![](/assets/images/2018/10/DSCF9721.jpg)
+![](/assets/images/2018/10/DSCF5140.jpg)
 
 
 <figcaption>Пляжный Лимасол</figcaption>
 
 Город растянут на несколько километров вдоль побережья, поэтому кажется довольно большим. Здесь есть несколько парков, зоопарк, муниципальные пляжи категории Г, торговые центры, бутики, музеи, кинотеатры. Но самое интересное — в историческом центре.
 
-<figure class="kg-card kg-gallery-card kg-width-wide kg-card-hascaption"><div class="kg-gallery-container">
-
-<div class="kg-gallery-image">![](/assets/images/2018/10/DSCF5718.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/10/DSCF5732.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/10/DSCF8725.jpg)
 
 
-<div class="kg-gallery-image">![](/assets/images/2018/10/DSCF8769.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/10/DSCF8860.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/10/DSCF9238.jpg)
+![](/assets/images/2018/10/DSCF5718.jpg)
+![](/assets/images/2018/10/DSCF5732.jpg)
+![](/assets/images/2018/10/DSCF8725.jpg)
 
 
-<div class="kg-gallery-image">![](/assets/images/2018/10/DSCF9243.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/10/DSCF9744.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/10/DSCF8853.jpg)
+![](/assets/images/2018/10/DSCF8769.jpg)
+![](/assets/images/2018/10/DSCF8860.jpg)
+![](/assets/images/2018/10/DSCF9238.jpg)
+
+
+![](/assets/images/2018/10/DSCF9243.jpg)
+![](/assets/images/2018/10/DSCF9744.jpg)
+![](/assets/images/2018/10/DSCF8853.jpg)
 
 
 <figcaption>Непляжный Лимасол</figcaption>
 
 Под самым интересным я имею в виду прогулочные набережные, марины, куски колониальной архитектуры, бары и средневековый османский форт. Больше ничего интересного нет, однако для продолжительного визита Лимасол подходит больше других городов.
 
-<figure class="kg-card kg-image-card kg-width-wide kg-card-hascaption">![](/assets/images/2018/10/DSCF8635.jpg)<figcaption>Пляж Лимасола в январе</figcaption>
+![Пляж Лимасола в январе](/assets/images/2018/10/DSCF8635.jpg)
 
 Неподалёку от Лимасола есть хорошо сохранившиеся руины древнего поселения [Курион](https://ru.wikipedia.org/wiki/Курион), представляющие интерес для юного археолога.
 
@@ -153,31 +154,31 @@ tags:
 
 Ещё одна многочисленная этническая группа — бритосы, которые приезжают в бывшую колонию, чтобы медленно увядать. Их печальная юдоль — город Пафос на западной оконечности острова — самый ухоженный из крупных городов Кипра. Совпадение? Не думаю.
 
-<figure class="kg-card kg-image-card kg-width-wide kg-card-hascaption">![](/assets/images/2018/10/DSCF9193.jpg)<figcaption>Пафос ночью</figcaption>
+![Пафос ночью](/assets/images/2018/10/DSCF9193.jpg)
 
 Культурного наследия в Пафосе гораздо больше, нежели в Лимасоле, поэтому город входит в список ЮНЕСКО. Гуляя по центру, то и дело наталкиваешься на какие-то древние развалины или ещё более древние пещеры. В общем, почитателям античности зайдёт.
 
-<figure class="kg-card kg-gallery-card kg-width-wide kg-card-hascaption"><div class="kg-gallery-container">
-<div class="kg-gallery-image">![](/assets/images/2018/10/DSCF9469-1.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/10/DSCF9478.jpg)
+
+![](/assets/images/2018/10/DSCF9469-1.jpg)
+![](/assets/images/2018/10/DSCF9478.jpg)
 
 <figcaption>Бухта Афродиты и какие-то развалины</figcaption>
 
 А ещё Пафос — место рождения культа Афродиты. Неподалёку от города есть [бухта](https://goo.gl/maps/A8n7659QxQu), в которой, согласно легенде, вышла на берег богиня любви, рождённая от расплескавшегося по морю семени из отрезанного Зевсом пениса его отца Крона (не спрашивайте).
 
-<figure class="kg-card kg-gallery-card kg-width-wide kg-card-hascaption"><div class="kg-gallery-container">
-
-<div class="kg-gallery-image">![](/assets/images/2018/10/DSCF5208.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/10/DSCF5216.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/10/DSCF5221.jpg)
 
 
-<div class="kg-gallery-image">![](/assets/images/2018/10/DSCF5234.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/10/DSCF5270.jpg)
+![](/assets/images/2018/10/DSCF5208.jpg)
+![](/assets/images/2018/10/DSCF5216.jpg)
+![](/assets/images/2018/10/DSCF5221.jpg)
 
 
-<div class="kg-gallery-image">![](/assets/images/2018/10/DSCF5283.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/10/DSCF5342.jpg)
+![](/assets/images/2018/10/DSCF5234.jpg)
+![](/assets/images/2018/10/DSCF5270.jpg)
+
+
+![](/assets/images/2018/10/DSCF5283.jpg)
+![](/assets/images/2018/10/DSCF5342.jpg)
 
 
 <figcaption>Сёрфинг в Пафосе</figcaption>
@@ -188,16 +189,16 @@ tags:
 
 Три факта, которые нужно знать о Ларнаке: самый большой аэропорт острова, неплохая прогулочная набережная с фортом, большое солёное озеро, куда зимой прилетают розовые фламинго (и фотографы, желающие это запечатлеть).
 
-<figure class="kg-card kg-gallery-card kg-width-wide kg-card-hascaption"><div class="kg-gallery-container">
-
-<div class="kg-gallery-image">![](/assets/images/2018/10/DSCF5453.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/10/DSCF5456.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/10/DSCF8949.jpg)
 
 
-<div class="kg-gallery-image">![](/assets/images/2018/10/DSCF8953.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/10/DSCF8955.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/10/DSCF9033.jpg)
+![](/assets/images/2018/10/DSCF5453.jpg)
+![](/assets/images/2018/10/DSCF5456.jpg)
+![](/assets/images/2018/10/DSCF8949.jpg)
+
+
+![](/assets/images/2018/10/DSCF8953.jpg)
+![](/assets/images/2018/10/DSCF8955.jpg)
+![](/assets/images/2018/10/DSCF9033.jpg)
 
 
 <figcaption>Ларнака и окрестности (без фламинго)</figcaption>
@@ -208,19 +209,19 @@ tags:
 
 Айия-Напа летним днём — город-пляж, где вместо песка — человеческие тела, а вместо моря — пятидесятипроцентный раствор урины. Айия-Напа летней ночью — большая дискотека с блек-джеком и всем остальным. Айия-Напа зимой — город призрак, в котором по улице гуляет эхо и память о шумных летних вечерах.
 
-<figure class="kg-card kg-image-card kg-width-wide kg-card-hascaption">![](/assets/images/2018/10/DSCF5461.jpg)<figcaption>Нисси Бич в Айия-Напе</figcaption>
+![Нисси Бич в Айия-Напе](/assets/images/2018/10/DSCF5461.jpg)
 
 В пределах города есть несколько аквапарков. Самый популярный пляж — [Нисси Бич.](https://goo.gl/maps/Yi8pkjfZVuN2) Рядом — [мост влюблённых](https://goo.gl/maps/grmJUyP2ekL2) и пещера кракена.
 
-<figure class="kg-card kg-gallery-card kg-width-wide kg-card-hascaption"><div class="kg-gallery-container">
-
-<div class="kg-gallery-image">![](/assets/images/2018/10/IMG_0355.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/10/IMG_0317.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/10/IMG_0323.jpg)
 
 
-<div class="kg-gallery-image">![](/assets/images/2018/10/DSCF5473.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/10/IMG_0353.jpg)
+![](/assets/images/2018/10/IMG_0355.jpg)
+![](/assets/images/2018/10/IMG_0317.jpg)
+![](/assets/images/2018/10/IMG_0323.jpg)
+
+
+![](/assets/images/2018/10/DSCF5473.jpg)
+![](/assets/images/2018/10/IMG_0353.jpg)
 
 
 <figcaption>Голубая Лагуна, мыс Греко и мост влюблённых рядом с Айия-Напой</figcaption>
@@ -231,7 +232,7 @@ tags:
 
 Подведу итоги первой части: во-первых, если приезжаете на пару месяцев, останавливайтесь в Лимасоле, в крайнем случае — в Пафосе. Остальные города в туристический сезон — полный аналог Геленджика с гиросами и Зиванией, а зимой — города-призраки. В общем, будет либо слишком скушно, либо слишком весело.
 
-<figure class="kg-card kg-image-card kg-width-wide kg-card-hascaption">![](/assets/images/2018/10/DSCF8841-1.jpg)<figcaption>Бухта Лимасола</figcaption>
+![Бухта Лимасола](/assets/images/2018/10/DSCF8841-1.jpg)
 
 Лимасол — живой и интересный в любое время года. Белого песка и пальм почти нет, зато по всей береговой линии есть пустые муниципальные пляжи с лежаками. Пафос чуть дешевле и ухоженней Лимасола — там тусуются престарелые бритосы, а рядом есть годные сёрфинг-споты и античные развалины.
 
@@ -239,7 +240,7 @@ tags:
 
 Кушать чаще всего придётся гиросы и сувлаки. В ресторане рекомендую заказать рыбное мезе — блюдо, состоящее из разных представителей водной фауны. Ещё местные любят начинать гастрономический вечер жареным сыром халуми. В общем, всё как на любом греческом курорте.
 
-<figure class="kg-card kg-image-card kg-width-wide kg-card-hascaption">![](/assets/images/2018/10/DSCF9646-2.jpg)<figcaption>Ета Афрдита</figcaption>
+![Ета Афрдита](/assets/images/2018/10/DSCF9646-2.jpg)
 
 На этом пока всё. Читайте [второй пост]( __GHOST_URL__ /kipr-2/) о самых крутых местах, которые туристы совершенно напрасно игнорируют.
 
