--- a/_posts/2018-11-07-kipr-2.markdown
+++ b/_posts/2018-11-07-kipr-2.markdown
@@ -11,7 +11,7 @@ tags:
 
 Невероятно, но факт: на Кипре есть не только Ларнака и Айия-Напа. Всё самое интересное находится вдалеке от курортных городов. Когда устанете от пляжей и рыбных ресторанов, прочтите этот пост, арендуйте мотор и отправляйтесь в увлекательное путешествие по антикурортному маршруту.
 
-<figure class="kg-card kg-image-card kg-width-wide kg-card-hascaption">![](/assets/images/2018/11/DSCF5517.jpg)<figcaption>Вид на Лефкару и горную цепь Троодос</figcaption>
+![Вид на Лефкару и горную цепь Троодос](/assets/images/2018/11/DSCF5517.jpg)
 
 Если всё же хотите предаваться ленивой неге, читайте [предыдущую публикацию]( __GHOST_URL__ /kipr-1/) о курортных городах и достопримечательностях.
 
@@ -19,15 +19,15 @@ tags:
 
 Итак, чтобы добраться до нижеописанных мест, понадобится тачка. Можно поехать на автобусе в составе тура, но тогда придётся тусить с толпой отпускников, жить по регламенту и смотреть только туда, куда велит гид. На автомобиле можно объехать весь остров за неделю, а если ездите быстро, то и за три дня.
 
-<figure class="kg-card kg-image-card kg-width-wide kg-card-hascaption">![](/assets/images/2018/11/DSCF9039.jpg)<figcaption>Арендрная тачка — самая быстрая</figcaption>
+![Арендрная тачка — самая быстрая](/assets/images/2018/11/DSCF9039.jpg)
 
 Рентакаров на острове куча: международные Hertz или Europcar, шараги с восхитительными названиями в стиле Bibika и Kalina. Нам рекомендовали средний вариант — кипрскую [сеть KEM](http://kemrentacar.com/) с низкими ценами и без подводных камней. Для аренды нужны: загранпаспорт, права и карточка с нужной суммой денег.
 
 Бронировать авто лучше на месте хотя бы за пару дней до поездки. Летом аренда стоит от 30€ в сутки, зимой можно выхватить что-то вроде Mazda Demio и за 20€. Бензин в стоимость не входит — авто нужно вернуть с полным баком. Литр 95 стоит примерно 1.3 евро.
 
-<figure class="kg-card kg-image-card kg-width-wide">![](/assets/images/2018/11/DSCF5150-2.jpg)<figure class="kg-card kg-gallery-card kg-width-wide kg-card-hascaption"><div class="kg-gallery-container">
-<div class="kg-gallery-image">![](/assets/images/2018/11/DSCF5163-1.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/11/DSCF5166.jpg)
+<figure class="kg-card kg-image-card kg-width-wide">![](/assets/images/2018/11/DSCF5150-2.jpg)
+![](/assets/images/2018/11/DSCF5163-1.jpg)
+![](/assets/images/2018/11/DSCF5166.jpg)
 
 <figcaption>Белые Камни на Кипре</figcaption>
 
@@ -35,9 +35,9 @@ tags:
 
 Движение на Кипре левостороннее. К счастью, дороги широкие, водители — спокойные, а КПП почти всегда автоматические. За несколько месяцев мы видели одну аварию, и та была настолько эпохальным событием, что полиция перегородила половину Ларнаки.
 
-<figure class="kg-card kg-gallery-card kg-width-wide kg-card-hascaption"><div class="kg-gallery-container">
-<div class="kg-gallery-image">![](/assets/images/2018/11/DSCF5478-1.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/11/DSCF5476.jpg)
+
+![](/assets/images/2018/11/DSCF5478-1.jpg)
+![](/assets/images/2018/11/DSCF5476.jpg)
 
 <figcaption>Автомобильные путешествия по Кипру</figcaption>
 
@@ -47,20 +47,20 @@ tags:
 
 Любимый маршрут выходного дня на Кипре — дорога от побережья в горы. По пути можно офигеть от пейзажей, напиться свежего вина, увидеть отель-призрак, купить кружева, летом спастись от зноя, а зимой — покататься на лыжах. Поездка займёт один день.
 
-<figure class="kg-card kg-image-card kg-width-wide kg-card-hascaption">![](/assets/images/2018/11/DSCF8970.jpg)<figcaption>Горные дороги на Кипре</figcaption>
+![Горные дороги на Кипре](/assets/images/2018/11/DSCF8970.jpg)
 ### Винный регион Омодос
 
 Фасад региона — небольшая деревушка [Омодос](https://goo.gl/maps/MgjqWREuFVG2) с каким-то древним монастырём и кучей туристических лавок. Смотреть здесь нечего, зато в лавках продают главные регионообразующие товары — вино, [коммандарию](https://ru.wikipedia.org/wiki/%D0%9A%D0%BE%D0%BC%D0%BC%D0%B0%D0%BD%D0%B4%D0%B0%D1%80%D0%B8%D1%8F) (местный портвейн), [зиванию](https://ru.wikipedia.org/wiki/%D0%97%D0%B8%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F) (местная граппа) и судзукос (местная чурчхела). Всё невероятно вкусное.
 
-<figure class="kg-card kg-gallery-card kg-width-wide kg-card-hascaption"><div class="kg-gallery-container">
-<div class="kg-gallery-image">![](/assets/images/2018/11/DSCF5391.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/11/DSCF9205.jpg)
+
+![](/assets/images/2018/11/DSCF5391.jpg)
+![](/assets/images/2018/11/DSCF9205.jpg)
 
 <figcaption>Экспортные продукты Омодоса</figcaption>
 
 Хозяева лавок наперебой предлагают что-нибудь продегустировать. Сначала это радует, но вот ты уже пьян, накупил кучу гранатовых настоек, какой-то орех и полкило домашнего сыра [халуми](https://ru.wikipedia.org/wiki/%D0%A5%D0%B0%D0%BB%D0%BB%D1%83%D0%BC%D0%B8), впереди ещё целый день, еда в багажнике протухнет, вино — прольётся, а ты сам — уснёшь в дороге. Короче, будьте осторожны.
 
-<figure class="kg-card kg-image-card kg-width-wide kg-card-hascaption">![](/assets/images/2018/11/DSCF5393-1.jpg)<figcaption>Главная площадь Омодоса</figcaption>
+![Главная площадь Омодоса](/assets/images/2018/11/DSCF5393-1.jpg)
 
 Если вам и этого мало, вокруг деревни есть семейные винницы, где вам тоже предательски нальют, а затем продадут свежее вино. Приезжать лучше в августе — сентябре, когда дозревает виноград.
 
@@ -68,23 +68,23 @@ tags:
 
 Верхняя точка горной цепи Троодос — пик [Олимбос](https://ru.wikipedia.org/wiki/%D0%9E%D0%BB%D0%B8%D0%BC%D0%B1%D0%BE%D1%81) на высоте 2 км над уровнем моря. Зимой здесь почти всегда лежит снег — можно кататься на лыжах и сноуборде. Перед поездкой стоит проверить погоду, потому что иногда на дороге образуется наледь, и колёса авто нужно обматывать цепью.
 
-<figure class="kg-card kg-gallery-card kg-width-wide kg-card-hascaption"><div class="kg-gallery-container">
-
-<div class="kg-gallery-image">![](/assets/images/2018/11/DSCF9080.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/11/DSCF9167.jpg)
 
 
-<div class="kg-gallery-image">![](/assets/images/2018/11/IMG_0417-2.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/11/DSCF9084-1.jpg)
+![](/assets/images/2018/11/DSCF9080.jpg)
+![](/assets/images/2018/11/DSCF9167.jpg)
+
+
+![](/assets/images/2018/11/IMG_0417-2.jpg)
+![](/assets/images/2018/11/DSCF9084-1.jpg)
 
 
 <figcaption>Олимбос — самая высокая гора Кипра</figcaption>
 
 Летом снега нет, зато часто идут сильные дожди и образуется туман. Температура в горах на 15–20 градусов ниже, чем у побережья — можно немного остыть, отдохнуть от кондиционера, погулять по горным трейлам и посмотреть на природу.
 
-<figure class="kg-card kg-gallery-card kg-width-wide kg-card-hascaption"><div class="kg-gallery-container">
-<div class="kg-gallery-image">![](/assets/images/2018/11/DSCF9513.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/11/DSCF9506.jpg)
+
+![](/assets/images/2018/11/DSCF9513.jpg)
+![](/assets/images/2018/11/DSCF9506.jpg)
 
 <figcaption>Температура в горах зимой — до -10 градусов</figcaption>
 
@@ -94,13 +94,13 @@ tags:
 
 Неподалёку от Олимбоса есть маленькая деревня [Продромос](https://goo.gl/maps/j14PE65pDmG2), знаменитая только заброшенным отелем [Беренгария](https://goo.gl/maps/1Rr3bTYfFN32). Мистический тон места задаёт типичная легенда о том, как было у отца три сына, а потом все преждевременно умерли в странных обстоятельствах.
 
-<figure class="kg-card kg-image-card kg-width-wide kg-card-hascaption">![](/assets/images/2018/11/DSCF9155.jpg)<figcaption>Разрушенный фасад отеля Беренгария</figcaption>
+![Разрушенный фасад отеля Беренгария](/assets/images/2018/11/DSCF9155.jpg)
 
 Отель закрыт с 1984 года. Людей внутри много, несмотря на кучу запрещающих знаков. Фасады и интерьеры частично разрушились и встречают заблудшего путника опадающей штукатуркой и провалами в полу, поэтому находиться в отеле и правда небезопасно.
 
-<figure class="kg-card kg-gallery-card kg-width-wide kg-card-hascaption"><div class="kg-gallery-container">
-<div class="kg-gallery-image">![](/assets/images/2018/11/DSCF9150.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/11/DSCF9176.jpg)
+
+![](/assets/images/2018/11/DSCF9150.jpg)
+![](/assets/images/2018/11/DSCF9176.jpg)
 
 <figcaption>Отель Беренгария — популярный спот для фотографий на Кипре</figcaption>
 
@@ -110,30 +110,30 @@ tags:
 
 Высоко-высоко в горах Кипра есть несколько маленьких водопадов. Настолько маленьких, что удивить они могут разве что человека, который ни разу не мылся под душем. Но если вам очень любопытно, езжайте на [Каледонию](https://goo.gl/maps/V5Uwjz7LeoP2) — крюк отнимет всего полчаса, зато вы сразу поймёте, что следующие водопады можно объехать стороной.
 
-<figure class="kg-card kg-gallery-card kg-width-wide kg-card-hascaption"><div class="kg-gallery-container">
-<div class="kg-gallery-image">![](/assets/images/2018/11/DSCF5397-1.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/11/DSCF5416.jpg)
+
+![](/assets/images/2018/11/DSCF5397-1.jpg)
+![](/assets/images/2018/11/DSCF5416.jpg)
 
 <figcaption>Водопады Кипра</figcaption>
 
 Ещё одна точка Кипра, занесённая в список ЮНЕСКО — горная деревня [Какопетрия](https://goo.gl/maps/v6YFDZsENd32). Она делится на две части: старую и новую. В новой, как легко догадаться, новые дома, а в старой — старые. Интерес, разумеется, представляет именно старая Какопетрия, которая расположена на холме и состоит всего из одной улицы.
 
-<figure class="kg-card kg-gallery-card kg-width-wide kg-card-hascaption"><div class="kg-gallery-container">
-<div class="kg-gallery-image">![](/assets/images/2018/11/DSCF5408.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/11/DSCF5420.jpg)
+
+![](/assets/images/2018/11/DSCF5408.jpg)
+![](/assets/images/2018/11/DSCF5420.jpg)
 
 <figcaption>Улицы старой Какопетрии</figcaption>
 
 А вот горная деревня [Лефкара](https://goo.gl/maps/xui7CcYbRuy) — мекка для любителей кружева и серебряной бижутерии. Лично я таких сумасшедших не встречал, поэтому рекомендовать не стану. Однако, если будет по пути, можно заехать за неплохими видами, приятной архитектурой и уютными кафешками.
 
-<figure class="kg-card kg-gallery-card kg-width-wide kg-card-hascaption"><div class="kg-gallery-container">
-
-<div class="kg-gallery-image">![](/assets/images/2018/11/DSCF5480.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/11/DSCF8986.jpg)
 
 
-<div class="kg-gallery-image">![](/assets/images/2018/11/DSCF9001.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/11/DSCF8975.jpg)
+![](/assets/images/2018/11/DSCF5480.jpg)
+![](/assets/images/2018/11/DSCF8986.jpg)
+
+
+![](/assets/images/2018/11/DSCF9001.jpg)
+![](/assets/images/2018/11/DSCF8975.jpg)
 
 
 <figcaption>Деревня Лефкара</figcaption>
@@ -144,23 +144,23 @@ tags:
 
 Этот красивейший [природный заповедник](https://goo.gl/maps/KA7G8p7wC1J2) находится на западе острова. Прогулка по ущелью займёт максимум пару часов, но вместе с дорогой по пересечённой местности может растянуться на целый день. Совместите эту поездку с визитом в Пафос и [Бухту Афродиты](https://goo.gl/maps/DpYxXTSL2YN2), если ещё там не бывали.
 
-<figure class="kg-card kg-gallery-card kg-width-wide kg-card-hascaption"><div class="kg-gallery-container">
-
-<div class="kg-gallery-image">![](/assets/images/2018/11/DSCF9312-1.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/11/DSCF9315.jpg)
 
 
-<div class="kg-gallery-image">![](/assets/images/2018/11/DSCF9350.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/11/DSCF9346.jpg)
+![](/assets/images/2018/11/DSCF9312-1.jpg)
+![](/assets/images/2018/11/DSCF9315.jpg)
+
+
+![](/assets/images/2018/11/DSCF9350.jpg)
+![](/assets/images/2018/11/DSCF9346.jpg)
 
 
 <figcaption>Ущелье Авакас</figcaption>
 
 Горный поток так расточил известняковую породу, что получились естественные стены высотой до 30 метров. На стенах — красивые паттерны и градиенты. Под ногами — тот самый горный поток, из-за которого в ущелье прохладно даже в жаркую погоду.
 
-<figure class="kg-card kg-gallery-card kg-width-wide kg-card-hascaption"><div class="kg-gallery-container">
-<div class="kg-gallery-image">![](/assets/images/2018/11/DSCF9398.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/11/IMG_0413.jpg)
+
+![](/assets/images/2018/11/DSCF9398.jpg)
+![](/assets/images/2018/11/IMG_0413.jpg)
 
 <figcaption>Ущелье Авакас</figcaption>
 
@@ -172,7 +172,7 @@ tags:
 
 Киприоты-эллины хотели присоединить остров к Греции, но ребята с турецкими корнями почему-то возражали. Греки замутили военный переворот, в ответ на что Турция ввела войска, разбомбила самые популярные туристические резорты и заняла больше 30% территории.
 
-<figure class="kg-card kg-image-card kg-width-wide kg-card-hascaption">![](/assets/images/2018/11/DSCF8774.jpg)<figcaption>Турецкая половина Никосии</figcaption>
+![Турецкая половина Никосии](/assets/images/2018/11/DSCF8774.jpg)
 
 С 1974 года остров разделён на две части. Между ними — огромная разница, натянутые отношения и буферная зона ООН.
 
@@ -182,7 +182,7 @@ tags:
 
 Несмотря на политические дрязги, граница между севером и югом открыта, но во всём нужно знать меру. Официальные лица южного Кипра не рекомендуют задерживаться в [ТРСК](https://ru.wikipedia.org/wiki/%D0%A2%D1%83%D1%80%D0%B5%D1%86%D0%BA%D0%B0%D1%8F_%D0%A0%D0%B5%D1%81%D0%BF%D1%83%D0%B1%D0%BB%D0%B8%D0%BA%D0%B0_%D0%A1%D0%B5%D0%B2%D0%B5%D1%80%D0%BD%D0%BE%D0%B3%D0%BE_%D0%9A%D0%B8%D0%BF%D1%80%D0%B0) больше, чем на день. Въезжать на южный Кипр с целью длительного визита на северный — вообще противопоказанно, дело может кончится депортацией.
 
-<figure class="kg-card kg-image-card kg-width-wide kg-card-hascaption">![](/assets/images/2018/11/Nicosia-Cyprus.jpg)<figcaption>Огромный турецкий флаг на горах северного Кипра</figcaption>
+![Огромный турецкий флаг на горах северного Кипра](/assets/images/2018/11/Nicosia-Cyprus.jpg)
 
 Если едете на день, проблем быть не должно. Достаточно показать визу, паспорт и купить автомобильную страховку, которая стоит примерно 30€ и продаётся прямо на границе.
 
@@ -192,11 +192,11 @@ tags:
 
 [Город](https://ru.wikipedia.org/wiki/%D0%A4%D0%B0%D0%BC%D0%B0%D0%B3%D1%83%D1%81%D1%82%D0%B0) находится на востоке, на границе государств. Раньше здесь был самый популярный туристический район [Вароша](https://goo.gl/maps/NwnjEVrG43z) с лучшими пляжами и люксовыми отелями. Чем-то он сильно не угодил туркам, поэтому его расконопатили в первую очередь и законсервировали.
 
-<figure class="kg-card kg-image-card kg-width-wide kg-card-hascaption">![](/assets/images/2018/11/IMG_0337.jpg)<figcaption>Пляж Фамагусты</figcaption>
+![Пляж Фамагусты](/assets/images/2018/11/IMG_0337.jpg)
 
 Сейчас вокруг Вароши возведён глухой забор с предупреждающими знаками и огромным штрафом за самовольное пересечение. Но с расположенного неподалёку пляжа отлично видны разрушенные военными и временем остовы шикарных гостиниц.
 
-<figure class="kg-card kg-image-card kg-width-wide kg-card-hascaption">![](/assets/images/2018/11/IMG_0340.jpg)<figcaption>Заброшенные отели в Вароше</figcaption>
+![Заброшенные отели в Вароше](/assets/images/2018/11/IMG_0340.jpg)
 
 Это пожалуй, самое впечатляющее зрелище на всём острове, но кроме этого смотреть в Фамагусте нечего.
 
@@ -204,21 +204,21 @@ tags:
 
 [Недалеко](https://goo.gl/maps/CArHHFViLvD2) от портового города Кириния можно найти одно из самых крутых мест на Кипре и по совместительству идеальный спот для просмотра закатов — [Замок святого Илариона](https://ru.wikipedia.org/wiki/%D0%97%D0%B0%D0%BC%D0%BE%D0%BA_%D0%A1%D0%B2%D1%8F%D1%82%D0%BE%D0%B3%D0%BE_%D0%98%D0%BB%D0%B0%D1%80%D0%B8%D0%BE%D0%BD%D0%B0), возведённый тысячу лет назад прямо на вершине горы.
 
-<figure class="kg-card kg-image-card kg-width-wide">![](/assets/images/2018/11/IMG_0452.jpg)<figure class="kg-card kg-gallery-card kg-width-wide kg-card-hascaption"><div class="kg-gallery-container">
-<div class="kg-gallery-image">![](/assets/images/2018/11/DSCF9548.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/11/IMG_0439.jpg)
+<figure class="kg-card kg-image-card kg-width-wide">![](/assets/images/2018/11/IMG_0452.jpg)
+![](/assets/images/2018/11/DSCF9548.jpg)
+![](/assets/images/2018/11/IMG_0439.jpg)
 
 <figcaption>Руины замка святого Илариона</figcaption>
 
 Замок пережил много войн, но турки его доконали. Чтобы подняться наверх, нужно запастись водой и терпением — благоустройством никто не занимался, поэтому идти придётся по скошенным каменным ступенькам, обгоняя запыхавшихся престарелых англичан.
 
-<figure class="kg-card kg-image-card kg-width-wide kg-card-hascaption">![](/assets/images/2018/11/IMG_0447.jpg)<figcaption>Вид с вершины замка святого Илариона</figcaption>
+![Вид с вершины замка святого Илариона](/assets/images/2018/11/IMG_0447.jpg)
 
 Чтобы перевести дух и подкрепиться, можно вернуться в [Киринию](https://ru.wikipedia.org/wiki/%D0%9A%D0%B8%D1%80%D0%B8%D0%BD%D0%B8%D1%8F). Местная бухта забита ресторанами, а цены здесь сильно ниже, чем на греческой части.
 
-<figure class="kg-card kg-gallery-card kg-width-wide kg-card-hascaption"><div class="kg-gallery-container">
-<div class="kg-gallery-image">![](/assets/images/2018/11/DSCF9563.jpg)
-<div class="kg-gallery-image">![](/assets/images/2018/11/IMG_0351.jpg)
+
+![](/assets/images/2018/11/DSCF9563.jpg)
+![](/assets/images/2018/11/IMG_0351.jpg)
 
 <figcaption>Кириния</figcaption>
 
