--- a/_posts/2020-01-13-2020.markdown
+++ b/_posts/2020-01-13-2020.markdown
@@ -14,23 +14,23 @@ tags:
 
 
 
-<div class="kg-gallery-image">![](/assets/images/2020/01/DSCF7503.jpg)
-<div class="kg-gallery-image">![](/assets/images/2020/01/DSCF7663.jpg)
+![](/assets/images/2020/01/DSCF7503.jpg)
+![](/assets/images/2020/01/DSCF7663.jpg)
 
 
-<div class="kg-gallery-image">![](/assets/images/2020/01/DSCF8621-2.jpg)
-<div class="kg-gallery-image">![](/assets/images/2020/01/DSCF8662-1.jpg)
+![](/assets/images/2020/01/DSCF8621-2.jpg)
+![](/assets/images/2020/01/DSCF8662-1.jpg)
 
 
-<div class="kg-gallery-image">![](/assets/images/2020/01/DSCF8558-6.jpg)
-<div class="kg-gallery-image">![](/assets/images/2020/01/DSCF8076-1.jpg)
+![](/assets/images/2020/01/DSCF8558-6.jpg)
+![](/assets/images/2020/01/DSCF8076-1.jpg)
 
 
 Вопреки географии, январь был холодным. Настолько, что жертвой пал масляный обогреватель, а горы щедрым слоем засыпал снег.
 
-<figure class="kg-card kg-gallery-card kg-width-wide kg-card-hascaption"><div class="kg-gallery-container">
-<div class="kg-gallery-image">![](/assets/images/2020/01/DSCF7984.jpg)
-<div class="kg-gallery-image">![](/assets/images/2020/01/DSCF7466-1.jpg)
+
+![](/assets/images/2020/01/DSCF7984.jpg)
+![](/assets/images/2020/01/DSCF7466-1.jpg)
 
 <figcaption>Суровая зимовка на Кипре</figcaption>
 ## Кранч длинною в год
@@ -41,7 +41,7 @@ tags:
 
 Эти метания постепенно превратились в аваланч проваленных дедлайнов и невыполненных целей. Накрыли так, что к концу года я чувствовал полное опустошение, апатию и отвращение к любым разговорам о работе и бизнесе. Глядя назад, должен признать, что от половины затей следовало отказаться.
 
-<figure class="kg-card kg-image-card kg-width-wide kg-card-hascaption">![](/assets/images/2020/01/DSCF0440.jpg)<figcaption>Практика — приложение для медитации на русском</figcaption>
+![Практика — приложение для медитации на русском](/assets/images/2020/01/DSCF0440.jpg)
 
 Спасибо Антону, Дане, Паше, Юле, и другим ребятам, которые тащили и тащат дела в те моменты, когда у меня не было сил.
 
@@ -55,43 +55,43 @@ tags:
 
 
 
-<div class="kg-gallery-image">![](/assets/images/2020/01/DSCF8893.jpg)
-<div class="kg-gallery-image">![](/assets/images/2020/01/DSCF9331.jpg)
+![](/assets/images/2020/01/DSCF8893.jpg)
+![](/assets/images/2020/01/DSCF9331.jpg)
 
 
-<div class="kg-gallery-image">![](/assets/images/2020/01/DSCF9086-1.jpg)
-<div class="kg-gallery-image">![](/assets/images/2020/01/DSCF9409.jpg)
+![](/assets/images/2020/01/DSCF9086-1.jpg)
+![](/assets/images/2020/01/DSCF9409.jpg)
 
 
-<div class="kg-gallery-image">![](/assets/images/2020/01/DSCF9243.jpg)
-<div class="kg-gallery-image">![](/assets/images/2020/01/DSCF0245-1.jpg)
+![](/assets/images/2020/01/DSCF9243.jpg)
+![](/assets/images/2020/01/DSCF0245-1.jpg)
 
 
 Четвёртый по величине город Польши оказался слишком тесным и замкнутым в себе. Несмотря на бурное развитие и претензию на статус польской кремниевой долины, Вроцлав сильно отдавал провинцией, а местами напоминал Уралмаш времён моей молодости.
 
 
 
-<div class="kg-gallery-image">![](/assets/images/2020/01/DSCF0207.jpg)
-<div class="kg-gallery-image">![](/assets/images/2020/01/DSCF9049.jpg)
+![](/assets/images/2020/01/DSCF0207.jpg)
+![](/assets/images/2020/01/DSCF9049.jpg)
 
 
-<div class="kg-gallery-image">![](/assets/images/2020/01/DSCF9278-1.jpg)
-<div class="kg-gallery-image">![](/assets/images/2020/01/DSCF9233-1.jpg)
+![](/assets/images/2020/01/DSCF9278-1.jpg)
+![](/assets/images/2020/01/DSCF9233-1.jpg)
 
 
 
 Насытившись этой малоприятной аналогией, мы решили переместить свою бренную жизнь в Краков — сильно бывшую столицу Речи Посполитой. Снова потеряли время, привычный быт, залог за квартиру и опять попали в петлю фрустрации и бюрократии.
 
 
-<div class="kg-gallery-image">![](/assets/images/2020/01/DSCF1031.jpg)
-<div class="kg-gallery-image">![](/assets/images/2020/01/DSCF1071.jpg)
+![](/assets/images/2020/01/DSCF1031.jpg)
+![](/assets/images/2020/01/DSCF1071.jpg)
 <figure class="kg-card kg-image-card kg-width-wide">![](/assets/images/2020/01/DSCF1488.jpg)
 
 К счастью, вторая попытка оказалась удачной, и мы обрели место, удовлетворяющий нашему стилю жизни (а ещё прекрасную квартиру с террасой и редким для местных широт центральным отоплением).
 
 
-<div class="kg-gallery-image">![](/assets/images/2020/01/DSCF0843.jpg)
-<div class="kg-gallery-image">![](/assets/images/2020/01/DSCF1126.jpg)
+![](/assets/images/2020/01/DSCF0843.jpg)
+![](/assets/images/2020/01/DSCF1126.jpg)
 
 
 Единственная проблема: за годы скитаний я привык к кочевой жизни и чувствую постоянную потребность куда-нибудь переехать. Но в ближайшие годы сил на это уже не хватит.
@@ -104,52 +104,52 @@ tags:
 
 
 
-<div class="kg-gallery-image">![](/assets/images/2020/01/DSCF8977.jpg)
-<div class="kg-gallery-image">![](/assets/images/2020/01/DSCF8979.jpg)
+![](/assets/images/2020/01/DSCF8977.jpg)
+![](/assets/images/2020/01/DSCF8979.jpg)
 
 
-<div class="kg-gallery-image">![](/assets/images/2020/01/DSCF8983.jpg)
-<div class="kg-gallery-image">![](/assets/images/2020/01/DSCF9873.jpg)
+![](/assets/images/2020/01/DSCF8983.jpg)
+![](/assets/images/2020/01/DSCF9873.jpg)
 
 
 
 Провели прекрасный июльский уикенд в Париже, который сгладил резко негативное отношение к французской столице, оставшееся после первого визита в 2014 году.
 
 <figure class="kg-card kg-image-card kg-width-wide">![](/assets/images/2020/01/DSCF9635.jpg)
-<div class="kg-gallery-image">![](/assets/images/2020/01/DSCF9567.jpg)
-<div class="kg-gallery-image">![](/assets/images/2020/01/DSCF9651.jpg)
+![](/assets/images/2020/01/DSCF9567.jpg)
+![](/assets/images/2020/01/DSCF9651.jpg)
 
 
 Не обошли вниманием (но обделили любовью) город Будапешт, который показался скучным, неопрятным и слишком неевропейским.
 
 
-<div class="kg-gallery-image">![](/assets/images/2020/01/DSCF0634.jpg)
-<div class="kg-gallery-image">![](/assets/images/2020/01/DSCF0736.jpg)
+![](/assets/images/2020/01/DSCF0634.jpg)
+![](/assets/images/2020/01/DSCF0736.jpg)
 
 
 Путешествовали по Польше. Начиная с Варшавы, которая с каждым разом нравилась всё меньше. Продолжая Катовице и Валбжихом, которые не разочаровали. Заканчивая замками и национальными парками, которые восхищали. В Польше невероятно красивая природа и отличная инфраструктура для приключений выходного дня.
 
 
 
-<div class="kg-gallery-image">![](/assets/images/2020/01/DSCF0353.jpg)
-<div class="kg-gallery-image">![](/assets/images/2020/01/DSCF0361.jpg)
+![](/assets/images/2020/01/DSCF0353.jpg)
+![](/assets/images/2020/01/DSCF0361.jpg)
 
 
-<div class="kg-gallery-image">![](/assets/images/2020/01/DSCF9863.jpg)
-<div class="kg-gallery-image">![](/assets/images/2020/01/DSCF9153.jpg)
+![](/assets/images/2020/01/DSCF9863.jpg)
+![](/assets/images/2020/01/DSCF9153.jpg)
 
 
 
-<div class="kg-gallery-image">![](/assets/images/2020/01/DSCF9161.jpg)
-<div class="kg-gallery-image">![](/assets/images/2020/01/DSCF9821-1.jpg)
+![](/assets/images/2020/01/DSCF9161.jpg)
+![](/assets/images/2020/01/DSCF9821-1.jpg)
 
 
-<div class="kg-gallery-image">![](/assets/images/2020/01/DSCF1472-1.jpg)
-<div class="kg-gallery-image">![](/assets/images/2020/01/DSCF1483-1.jpg)
+![](/assets/images/2020/01/DSCF1472-1.jpg)
+![](/assets/images/2020/01/DSCF1483-1.jpg)
 
 
-<div class="kg-gallery-image">![](/assets/images/2020/01/DSCF9739-1.jpg)
-<div class="kg-gallery-image">![](/assets/images/2020/01/DSCF9767-1.jpg)
+![](/assets/images/2020/01/DSCF9739-1.jpg)
+![](/assets/images/2020/01/DSCF9767-1.jpg)
 
 
 Жизнь интроверта на чужбине — это добровольная изоляция. Поэтому хочу сказать спасибо друзьям, которые приезжали в гости, звали в поездки и помогали растопить одиночество: Игоряну, Ване, Никите, Саше, Шасе, Элис, Серёге, Вите и его семье. И ещё куче людей, встречи с кем были спонтанными и приятными. Спасибо.
@@ -162,18 +162,18 @@ tags:
 
 День рождения отметил в любимой Праге с любимыми гуманойдами. Выпил все запасы моравского вина и рождественского сваржака.
 
-<figure class="kg-card kg-image-card kg-width-wide kg-card-hascaption">![](/assets/images/2020/01/File-00005.jpg)<figcaption>Никита — самый плёночный фотограф в моём мире</figcaption>
+![Никита — самый плёночный фотограф в моём мире](/assets/images/2020/01/File-00005.jpg)
 
 Новый год встретил в горах и снова в отличной компании. Увидели снег, который в Кракове по сей день не выпал и не собирается.
 
 
 
-<div class="kg-gallery-image">![](/assets/images/2020/01/DSCF1275.jpg)
-<div class="kg-gallery-image">![](/assets/images/2020/01/DSCF1288.jpg)
+![](/assets/images/2020/01/DSCF1275.jpg)
+![](/assets/images/2020/01/DSCF1288.jpg)
 
 
-<div class="kg-gallery-image">![](/assets/images/2020/01/DSCF1356.jpg)
-<div class="kg-gallery-image">![](/assets/images/2020/01/DSCF1388.jpg)
+![](/assets/images/2020/01/DSCF1356.jpg)
+![](/assets/images/2020/01/DSCF1388.jpg)
 
 <figure class="kg-card kg-image-card kg-width-wide">![](/assets/images/2020/01/DSCF1368.jpg)
 
