--- a/_posts/2019-01-07-2k18.markdown
+++ b/_posts/2019-01-07-2k18.markdown
@@ -15,14 +15,14 @@ tags:
 
 Год начался и закончился на Кипре. За три визита остров стал почти родным. Идеальное место, чтобы погреть кости и отдохнуть от даров цивилизации. Ближе Юго-восточной Азии, дешевле европейских курортов и гораздо теплее базовой страны.
 
-<figure class="kg-card kg-gallery-card kg-width-wide kg-card-hascaption"><div class="kg-gallery-container">
-
-<div class="kg-gallery-image">![](/assets/images/2019/01/DSCF9046.jpg)
-<div class="kg-gallery-image">![](/assets/images/2019/01/DSCF7309.jpg)
 
 
-<div class="kg-gallery-image">![](/assets/images/2019/01/DSCF5335.jpg)
-<div class="kg-gallery-image">![](/assets/images/2019/01/DSCF5221.jpg)
+![](/assets/images/2019/01/DSCF9046.jpg)
+![](/assets/images/2019/01/DSCF7309.jpg)
+
+
+![](/assets/images/2019/01/DSCF5335.jpg)
+![](/assets/images/2019/01/DSCF5221.jpg)
 
 
 <figcaption>Три визита на Кипр</figcaption>
@@ -39,13 +39,13 @@ tags:
 Суммарно провёл в России всего 4 месяца. Окончательно понял, что не способен выжить в Москве. Съехал со съёмной квартиры и отправился искать новый дом. На память остался всего один пост и горстка фоток из столицы.
 
 - [Февраль в Москве](https://shouldgo.ru/february-in-moscow/)
-<figure class="kg-card kg-gallery-card kg-width-wide kg-card-hascaption"><div class="kg-gallery-container">
-<div class="kg-gallery-image">![](/assets/images/2019/01/DSCF0102.jpg)
-<div class="kg-gallery-image">![](/assets/images/2019/01/DSCF9965.jpg)
 
-<figcaption>Москва Зимой</figcaption><figure class="kg-card kg-gallery-card kg-width-wide kg-card-hascaption"><div class="kg-gallery-container">
-<div class="kg-gallery-image">![](/assets/images/2019/01/DSCF4272.jpg)
-<div class="kg-gallery-image">![](/assets/images/2019/01/DSCF4698-2.jpg)
+![](/assets/images/2019/01/DSCF0102.jpg)
+![](/assets/images/2019/01/DSCF9965.jpg)
+
+<figcaption>Москва Зимой</figcaption>
+![](/assets/images/2019/01/DSCF4272.jpg)
+![](/assets/images/2019/01/DSCF4698-2.jpg)
 
 <figcaption>Москва Летом</figcaption>
 
@@ -53,14 +53,14 @@ tags:
 
 - [Длинная тень Екатеринбурга](https://shouldgo.ru/ekb-longshadow/)
 - [Летотеринбург](https://shouldgo.ru/summer-ekb/)
-<figure class="kg-card kg-gallery-card kg-width-wide kg-card-hascaption"><div class="kg-gallery-container">
-
-<div class="kg-gallery-image">![](/assets/images/2019/01/DSCF0624.jpg)
-<div class="kg-gallery-image">![](/assets/images/2019/01/DSCF3606.jpg)
 
 
-<div class="kg-gallery-image">![](/assets/images/2019/01/DSCF3717.jpg)
-<div class="kg-gallery-image">![](/assets/images/2019/01/DSCF3860.jpg)
+![](/assets/images/2019/01/DSCF0624.jpg)
+![](/assets/images/2019/01/DSCF3606.jpg)
+
+
+![](/assets/images/2019/01/DSCF3717.jpg)
+![](/assets/images/2019/01/DSCF3860.jpg)
 
 
 <figcaption>Екатеринбург в любое время года</figcaption>
@@ -71,20 +71,20 @@ tags:
 
 Из Еката мы свалили в Прагу. Хотели потусоваться месяц, но в итоге задержались на три, потому что весенняя Прага — это просто бонба. Остались бы навсегда, но чехи не очень рады иммигрантам. Вернулись в декабре — за глинтвейном и клобасами.
 
-<figure class="kg-card kg-image-card kg-width-wide">![](/assets/images/2019/01/DSCF2620-1.jpg)<figure class="kg-card kg-gallery-card kg-width-wide kg-card-hascaption"><div class="kg-gallery-container">
-<div class="kg-gallery-image">![](/assets/images/2019/01/DSCF2042-1.jpg)
-<div class="kg-gallery-image">![](/assets/images/2019/01/DSCF3574-1.jpg)
+<figure class="kg-card kg-image-card kg-width-wide">![](/assets/images/2019/01/DSCF2620-1.jpg)
+![](/assets/images/2019/01/DSCF2042-1.jpg)
+![](/assets/images/2019/01/DSCF3574-1.jpg)
 
 <figcaption>Пражская весна</figcaption><figure class="kg-card kg-image-card kg-width-wide">![](/assets/images/2019/01/DSCF7164.jpg)
 
-<div class="kg-gallery-image">![](/assets/images/2019/01/DSCF1167.jpg)
-<div class="kg-gallery-image">![](/assets/images/2019/01/DSCF6908.jpg)
+![](/assets/images/2019/01/DSCF1167.jpg)
+![](/assets/images/2019/01/DSCF6908.jpg)
 
 
-<div class="kg-gallery-image">![](/assets/images/2019/01/DSCF7258.jpg)
-<div class="kg-gallery-image">![](/assets/images/2019/01/DSCF6914.jpg)
+![](/assets/images/2019/01/DSCF7258.jpg)
+![](/assets/images/2019/01/DSCF6914.jpg)
 
-<figure class="kg-card kg-image-card kg-width-wide kg-card-hascaption">![](/assets/images/2019/01/DSCF7144.jpg)<figcaption>Пражская зима</figcaption>
+![Пражская зима](/assets/images/2019/01/DSCF7144.jpg)
 
 Новый пост о Праге я не написал, но есть старые из 2012 года:
 
@@ -97,14 +97,14 @@ tags:
 - [Чески Крумлов — мать деревень чешских](https://shouldgo.ru/cesky-krumlov/)
 <figure class="kg-card kg-image-card kg-width-wide">![](/assets/images/2019/01/DSCF1061.jpg)
 
-<div class="kg-gallery-image">![](/assets/images/2019/01/DSCF6645.jpg)
-<div class="kg-gallery-image">![](/assets/images/2019/01/DSCF0970.jpg)
+![](/assets/images/2019/01/DSCF6645.jpg)
+![](/assets/images/2019/01/DSCF0970.jpg)
 
 
-<div class="kg-gallery-image">![](/assets/images/2019/01/DSCF1480.jpg)
-<div class="kg-gallery-image">![](/assets/images/2019/01/DSCF0945.jpg)
+![](/assets/images/2019/01/DSCF1480.jpg)
+![](/assets/images/2019/01/DSCF0945.jpg)
 
-<figure class="kg-card kg-image-card kg-width-wide kg-card-hascaption">![](/assets/images/2019/01/DSCF6707.jpg)<figcaption>Разные уголки Чехии</figcaption>
+![Разные уголки Чехии](/assets/images/2019/01/DSCF6707.jpg)
 
 Теперь переезд в Чехию — цель на ближайшие десять лет.
 
@@ -114,16 +114,16 @@ tags:
 
 
 
-<div class="kg-gallery-image">![](/assets/images/2019/01/DSCF2908-1.jpg)
-<div class="kg-gallery-image">![](/assets/images/2019/01/DSCF3097-1.jpg)
+![](/assets/images/2019/01/DSCF2908-1.jpg)
+![](/assets/images/2019/01/DSCF3097-1.jpg)
 
 
-<div class="kg-gallery-image">![](/assets/images/2019/01/DSCF3083-1.jpg)
-<div class="kg-gallery-image">![](/assets/images/2019/01/DSCF2376-3.jpg)
+![](/assets/images/2019/01/DSCF3083-1.jpg)
+![](/assets/images/2019/01/DSCF2376-3.jpg)
 
-<figure class="kg-card kg-gallery-card kg-width-wide kg-card-hascaption"><div class="kg-gallery-container">
-<div class="kg-gallery-image">![](/assets/images/2019/01/DSCF2520-2.jpg)
-<div class="kg-gallery-image">![](/assets/images/2019/01/DSCF2287-1.jpg)
+
+![](/assets/images/2019/01/DSCF2520-2.jpg)
+![](/assets/images/2019/01/DSCF2287-1.jpg)
 
 <figcaption>Фотокарточки из Европы</figcaption>
 
@@ -138,19 +138,19 @@ tags:
 Ещё три месяца провели на руинах Речи Посполитой, успели посмотреть три города. Варшаву нашли неуютной, в Кракове дурная экология, поэтому на будущее выбрали Вроцлав.
 
 
-<div class="kg-gallery-image">![](/assets/images/2019/01/DSCF5863.jpg)
-<div class="kg-gallery-image">![](/assets/images/2019/01/DSCF5887.jpg)
-<figure class="kg-card kg-image-card kg-width-wide kg-card-hascaption">![](/assets/images/2019/01/DSCF5835.jpg)<figcaption>Осень в Польше</figcaption>
+![](/assets/images/2019/01/DSCF5863.jpg)
+![](/assets/images/2019/01/DSCF5887.jpg)
+![Осень в Польше](/assets/images/2019/01/DSCF5835.jpg)
 
 Заехали в Аушвиц-Биркенау и немного охуели. Побывали в Татрах — это такие горы на границе Польши и Словакии.
 
-<figure class="kg-card kg-gallery-card kg-width-wide kg-card-hascaption"><div class="kg-gallery-container">
-<div class="kg-gallery-image">![](/assets/images/2019/01/DSCF6265.jpg)
-<div class="kg-gallery-image">![](/assets/images/2019/01/DSCF6320.jpg)
 
-<figcaption>Татры</figcaption><figure class="kg-card kg-gallery-card kg-width-wide kg-card-hascaption"><div class="kg-gallery-container">
-<div class="kg-gallery-image">![](/assets/images/2019/01/DSCF6461.jpg)
-<div class="kg-gallery-image">![](/assets/images/2019/01/DSCF6486.jpg)
+![](/assets/images/2019/01/DSCF6265.jpg)
+![](/assets/images/2019/01/DSCF6320.jpg)
+
+<figcaption>Татры</figcaption>
+![](/assets/images/2019/01/DSCF6461.jpg)
+![](/assets/images/2019/01/DSCF6486.jpg)
 
 <figcaption>Аушвиц-Биркенау</figcaption>
 
@@ -168,9 +168,9 @@ tags:
 
 С фотографией всё тоже грустно. Снимков много, но хороших — единицы. В путешествиях фоткаешь всё подряд, а надо бы фокусироваться, работать над техникой, пробовать новые жанры.
 
-<figure class="kg-card kg-gallery-card kg-width-wide kg-card-hascaption"><div class="kg-gallery-container">
-<div class="kg-gallery-image">![](/assets/images/2019/01/DSCF0134-1.jpg)
-<div class="kg-gallery-image">![](/assets/images/2019/01/DSCF9991-1.jpg)
+
+![](/assets/images/2019/01/DSCF0134-1.jpg)
+![](/assets/images/2019/01/DSCF9991-1.jpg)
 
 <figcaption>Спасибо Дане Косинскому за удачные кадры</figcaption>
 
@@ -228,29 +228,29 @@ tags:
 
 В январе [Аутмаркетингу](http://outmarketing.ru)\* исполнится два года. Дела идут не слишком хорошо, но и не совсем погано. Среди клиентов Яндекс, Лего и одна большая соцсеть, но пока мы качали только свои скилы, а надо качать бизнес и команду.
 
-<figure class="kg-card kg-gallery-card kg-width-wide kg-card-hascaption"><div class="kg-gallery-container">
-<div class="kg-gallery-image">![](/assets/images/2019/01/_DSC0076.jpg)
-<div class="kg-gallery-image">![](/assets/images/2019/01/_DSC0109.jpg)
+
+![](/assets/images/2019/01/_DSC0076.jpg)
+![](/assets/images/2019/01/_DSC0109.jpg)
 
 <figcaption>Я втираю какую-то дичь</figcaption>
 
 Мы с [Антоном](https://www.facebook.com/a.shayakhov) успели поработать во всяких крутых компаниях, но к предпринимательству нас жизнь не подготовила. Наделали кучу ошибок и несколько раз были на сантиметр от закрытия. Кажется, многое поняли и теперь знаем, что делать.
 
-<figure class="kg-card kg-image-card kg-width-wide kg-card-hascaption">![](/assets/images/2019/01/40628581_509847229443098_7823365277071966208_o.jpg)<figcaption>Офис Аутмаркетинга* на Кипре</figcaption>
+![Офис Аутмаркетинга* на Кипре](/assets/images/2019/01/40628581_509847229443098_7823365277071966208_o.jpg)
 
 Попутно стали многосерийными предпринимателями — запустили фановый сайдпроект [sameshirt\*](http://sameshirt.ru/) — пять чёрных футболок с доставкой. Получилось кайфово, но денег он практически не приносит, потому что не хватает времени.
 
-<figure class="kg-card kg-gallery-card kg-width-wide kg-card-hascaption"><div class="kg-gallery-container">
-<div class="kg-gallery-image">![](/assets/images/2019/01/DSCF5109.jpg)
-<div class="kg-gallery-image">![](/assets/images/2019/01/DSCF5119.jpg)
+
+![](/assets/images/2019/01/DSCF5109.jpg)
+![](/assets/images/2019/01/DSCF5119.jpg)
 
 <figcaption>Чёрные футболки — ванлав</figcaption>
 
 В начале года занялся личными инвестициями. Скопил хорошую финансовую подушку и начал складывать по 20% дохода в акции. Сейчас рынок сильно трясёт, поэтому прибыль отрицательная, но статистика говорит, что без резких телодвижений уйти в минус на горизонте десяти лет довольно сложно.
 
-<figure class="kg-card kg-gallery-card kg-width-wide kg-card-hascaption"><div class="kg-gallery-container">
-<div class="kg-gallery-image">![](/assets/images/2019/01/DSCF5748.jpg)
-<div class="kg-gallery-image">![](/assets/images/2019/01/Screenshot-2019-01-07-at-21.16.15.png)
+
+![](/assets/images/2019/01/DSCF5748.jpg)
+![](/assets/images/2019/01/Screenshot-2019-01-07-at-21.16.15.png)
 
 <figcaption>Мама, я акционер</figcaption>
 
@@ -260,9 +260,9 @@ tags:
 
 Новый год встретил в горах и в отличной компании. Лучший финал сложно придумать. Посмотрю на этот пост 365 дней спустя, и удивлюсь тому, как было охуенно.
 
-<figure class="kg-card kg-gallery-card kg-width-wide kg-card-hascaption"><div class="kg-gallery-container">
-<div class="kg-gallery-image">![](/assets/images/2019/01/DSCF7453.jpg)
-<div class="kg-gallery-image">![](/assets/images/2019/01/HbBrEaU-Q-ewRWzRm16Glw_thumb_180d.jpg)
+
+![](/assets/images/2019/01/DSCF7453.jpg)
+![](/assets/images/2019/01/HbBrEaU-Q-ewRWzRm16Glw_thumb_180d.jpg)
 
 <figcaption>Новый год в кипрских горах</figcaption>
 
