--- a/_posts/2021-01-12-2k20.markdown
+++ b/_posts/2021-01-12-2k20.markdown
@@ -16,25 +16,23 @@ image: assets/images/2021/01/cover.jpeg
 
 2020 начался заурядно. Мы собрали друзей и отправились в «польские Альпы» ака [Татры](https://goo.gl/maps/fPVkFXmUJvpu8XEd7). Ребята катались на лыжах и бордах по высоким горам, а я колесил в синих санях по высоким градусам, поправляя разболтавшееся по случаю зимы настроение. На сдачу мы сняли авто и проведали замки разных стадий разложения, расположенные вдоль [Маршрута Орлиных Гнёзд](https://ru.wikipedia.org/wiki/Путь_Орлиных_Гнёзд).
 
-![](/assets/images/2021/01/DSCF1334.jpg)
+- ![](/assets/images/2021/01/DSCF1334.jpg)
+- ![](/assets/images/2021/01/DSCF1425.jpg)
 
-![](/assets/images/2021/01/DSCF1425.jpg)
 
 Новый год в горном курорте Закопане в польских Татрах
 
 Дальше всё было настолько тухло, что сознание вернулось ко мне лишь в феврале, когда настала пора отправиться в Россию, чтобы продлить рабочие визы и повидать любимых людей из Москвы, Питера и родного Еката. РЖД довёз нас в обе стороны прекрасным поездом Москва — Прага, а сама Родина покатала на русских горках ностальгической меланхолии.
 
-![](/assets/images/2021/01/DSCF1696.jpg)
-
-![](/assets/images/2021/01/DSCF1705.jpg)
+- ![](/assets/images/2021/01/DSCF1696.jpg)
+- ![](/assets/images/2021/01/DSCF1705.jpg)
 
 Никольское кладбище в Санкт-Петербурге — отличная иллюстрация для поездки в Россию
 
 Самая яркая эмоция поездки — тревожное чувство, которое испытываешь, преодолевая кордоны серых ментов, заборы и рамки металлоискателей на Белорусском вокзале. Эта картина моментально вырывает из нежной еврогейской фантазии и возвращает в суровую действительность, в которой нужно быть начеку и ко всему относиться философски.
 
-![](/assets/images/2021/01/IMG_0921.jpg)
-
-![](/assets/images/2021/01/IMG_0964.jpg)
+- ![](/assets/images/2021/01/IMG_0921.jpg)
+- ![](/assets/images/2021/01/IMG_0964.jpg)
 
 Самые радостные вещи — подстаканники РЖД и ВНЖ в Польше
 
@@ -44,13 +42,10 @@ image: assets/images/2021/01/cover.jpeg
 
 Чтобы отметить начало личной евроинтеграции и смыть горькое послевкусие большой родины, мы отправились любоваться пражской весной сквозь янтарь моравских вин. В Чехии я случался слишком часто, и даже написал [огромный пост]( __GHOST_URL__ /prague-czechia/) о жизни и о путешествиях по стране. Однако раз за разом возвращаюсь с огромным удовольствием, чего и вам советую.
 
-![](/assets/images/2021/01/DSCF1753.jpg)
-
-![](/assets/images/2021/01/DSCF1756.jpg)
-
-![](/assets/images/2021/01/DSCF3376.jpg)
-
-![](/assets/images/2021/01/2C38DB67-F81A-4125-A827-F8CC8C0932A5.jpg)
+- ![](/assets/images/2021/01/DSCF1753.jpg)
+- ![](/assets/images/2021/01/DSCF1756.jpg)
+- ![](/assets/images/2021/01/DSCF3376.jpg)
+- ![](/assets/images/2021/01/2C38DB67-F81A-4125-A827-F8CC8C0932A5.jpg)
 
 Весна перед локдауном в Чехии
 
@@ -58,9 +53,8 @@ image: assets/images/2021/01/cover.jpeg
 
 Ночью мы успели выхватить билеты на последний автобус до Кракова, а уже утром весь международный транспорт отменили. Аренду авто моментально подорожала до €500 в сутки, а единственный выход, который нам предложил добрый сотрудник вокзала — ехать внутренним рейсом до польской границы, а дальше добираться пешком, «если вас пропустят пограничники».
 
-![](/assets/images/2021/01/IMG_1154.jpg)
-
-![](/assets/images/2021/01/IMG_1169.jpg)
+- ![](/assets/images/2021/01/IMG_1154.jpg)
+- ![](/assets/images/2021/01/IMG_1169.jpg)
 
 Экстренная эвакуация из Чехии в Польшу через пешую границу
 
@@ -70,57 +64,47 @@ image: assets/images/2021/01/cover.jpeg
 
 Мы успели проскочить под самый занавес. На следующий день [Польша закрыла границы,](https://www.facebook.com/dima.afonin/posts/10221922263950429) и вернуться стало возможно только через двухнедельный карантин. Страна ввела одни из самых строгих ограничений во всём ЕС: отменила праздные прогулки, обязала носить маски на улице, закрыла общественные места вплоть до детских площадок и ввела часы для шопинга пенсионеров.
 
-![](/assets/images/2021/01/DSCF1904.jpg)
-
-![](/assets/images/2021/01/DSCF3571.jpg)
+- ![](/assets/images/2021/01/DSCF1904.jpg)
+- ![](/assets/images/2021/01/DSCF3571.jpg)
 
 Опустевший Краков во время первой волны
 
 Краковяки принялись на удивление дисциплинированно соблюдать [все требования и рекомендации](https://www.facebook.com/dima.afonin/posts/10222009897341209), посему первая волна едва доползла до 500 дневных кейсов. Нам же оставалось сидеть дома и радоваться большой зелёной террасе с видом на весну. Поначалу, это было даже интересно — наконец посидеть на жопе после пары лет постоянных переездов.
 
-![](/assets/images/2021/01/DSCF2093.jpg)
-
-![](/assets/images/2021/01/IMG_0777.jpg)
+- ![](/assets/images/2021/01/DSCF2093.jpg)
+- ![](/assets/images/2021/01/IMG_0777.jpg)
 
 Терасса спасла от жёстких ковидных ограничений
 
 Внезапно появились деньги и время, чтобы облагородить быт маленькими радостями, вроде турника и комфортного рабочего кресла. Затем стало невыносимо скучно, и начались излишества, вроде телевизора и постоянных винных дегустаций (благодаря которым я в совершенстве овладел винным диалектом польского и открыл Weisser Mulatschak и Andert-Wein Rosè).
 
-![](/assets/images/2021/01/DSCF1847.jpg)
-
-![](/assets/images/2021/01/DSCF1875.jpg)
+- ![](/assets/images/2021/01/DSCF1847.jpg)
+- ![](/assets/images/2021/01/DSCF1875.jpg)
 
 Изумительная весна, которую мы пропустили
 
 К лету ограничения ослабли. Несмотря на это, польское правительство перенесло президентские выборы (за которыми было действительно интересно наблюдать, хотя победил всё равно [кандидат от Единой России](https://www.facebook.com/dima.afonin/posts/10222106771403000)). Российские выборы новой конституции никто не переносил, и мы добросовестно [выразили своё нет](https://www.facebook.com/dima.afonin/posts/10223067168612330), хотя старательно избегали походов в любые общественные места.
 
-![](/assets/images/2021/01/DSCF2031.jpg)
-
-![](/assets/images/2021/01/DSCF2756.jpg)
-
-![](/assets/images/2021/01/DSCF2195.jpg)
-
-![](/assets/images/2021/01/DSCF3426.jpg)
+- ![](/assets/images/2021/01/DSCF2031.jpg)
+- ![](/assets/images/2021/01/DSCF2756.jpg)
+- ![](/assets/images/2021/01/DSCF2195.jpg)
+- ![](/assets/images/2021/01/DSCF3426.jpg)
 
 Жаркое краковское лето
 
 Вторая волна началась в сентябре и докатилась до куда более удручающих 30 тысяч выявленных случаев в день. Польша со скрипом переварила такой наплыв заболевших, ограничения вернулись, и мы до сих пор лишены всех благ культурно-социального досуга, в том числе прогулок по улице без приросших к лицу масок и поездок в соседние страны.
 
-![](/assets/images/2021/01/DSCF3634.jpg)
-
-![](/assets/images/2021/01/DSCF3521.jpg)
-
-![](/assets/images/2021/01/DSCF3495.jpg)
-
-![](/assets/images/2021/01/DSCF3798.jpg)
+- ![](/assets/images/2021/01/DSCF3634.jpg)
+- ![](/assets/images/2021/01/DSCF3521.jpg)
+- ![](/assets/images/2021/01/DSCF3495.jpg)
+- ![](/assets/images/2021/01/DSCF3798.jpg)
 
 Затяжная краковская осень длится с октября до декабря
 
 Весна в Кракове была изумительной — весь апрель цвели вишня, сакура и крокусы. Лето было долгим и жарким. Золотая осень плавно текла с октября по ноябрь. Но в декабре наступила мрачная срань с туманами, дождями и непроницаемым серым смогом. Снег так и не выпал, а мы впервые начали грустить, что город такой тихий и тесный.
 
-![](/assets/images/2021/01/DSCF3851.jpg)
-
-![](/assets/images/2021/01/DSCF3664-1
+- ![](/assets/images/2021/01/DSCF3851.jpg)
+- ![](/assets/images/2021/01/DSCF3664-1.jpg)
 Единственное развлечение зимой 2020 — смотреть в бездну
 
 По какой-то одному Зевсу известной причине год выдался абсолютно всратым не только в смысле пандемической ебанины, но и в плане производства и потребления контента. Вспомнить практически нечего, остаётся только зарыть здесь эту текстовографическую капсулу времени с самым унылым в мире [топом книжек, фильмов, игр, песенок и подкастов](https://www.facebook.com/dima.afonin/posts/10224569826377835).
@@ -139,66 +123,55 @@ image: assets/images/2021/01/cover.jpeg
 
 Несмотря на всё, мы успели посетить несколько старых и новых мест. Летом, пока внутренние границы ЕС были открыты, слетали на постковидную Сицилию. Сам остров показался грязным, враждебным и скучным (особенно [Катанья](https://goo.gl/maps/ByDR4ZDHLyB8PeE67), в которой мы имели глупость остановиться). Несколько раз было реально тревожно за свою безопасность.
 
-![](/assets/images/2021/01/DSCF2779.jpg)
-
-![](/assets/images/2021/01/DSCF2870.jp
-![](/assets/images/2021/01/DSCF2900.jpg)
-
-![](/assets/images/2021/01/DSCF2945.jpg)
+- ![](/assets/images/2021/01/DSCF2779.jpg)
+- ![](/assets/images/2021/01/DSCF2870.jpg)
+- ![](/assets/images/2021/01/DSCF2900.jpg)
+- ![](/assets/images/2021/01/DSCF2945.jpg)
 
 Сицилия — далеко не лучшее место для отдыха в Италии
 
 Однако, соскучившиеся по туристам итальянцы немного разбавили картину. Особенно сторож замка [Ачи-Кастелло](https://goo.gl/maps/h2CFyyLw8MAm7HHQ6), который читал нам Бродского на итальянском и слушал мои декламации на русском, после чего называл нас исключительно Иосифом и Мариной. Прекрасная сицилийская кухня тоже оставила неизгладимый гастрономический след.
 
-![](/assets/images/2021/01/DSCF2790.jpg)
-
-![](/assets/images/2021/01/DSCF2911.jpg)
+- ![](/assets/images/2021/01/DSCF2790.jpg)
+- ![](/assets/images/2021/01/DSCF2911.jpg)
 
 В ковидные времена радуешься даже такому
 
 В августе навестили друзей на Кипре. Остров давно стал родным, поэтому, вместо повторного осмотра всех достопримечательностей, мы грели кости на пляжах, дрифтили на вжареной бэхе, коллективно смотрели ютуб и переживали за ребят из Беларуси. Едва успели вернуться в Краков, как Кипр ввёл новый локдаун и ограничил авиасообщение.
 
-![](/assets/images/2021/01/DSCF3039.jpg)
-
-![](/assets/images/2021/01/DSCF3083.jpg)
-
-![](/assets/images/2021/01/DSCF3152.jpg)
-
-![](/assets/images/2021/01/IMG_3743.jpg)
+- ![](/assets/images/2021/01/DSCF3039.jpg)
+- ![](/assets/images/2021/01/DSCF3083.jpg)
+- ![](/assets/images/2021/01/DSCF3152.jpg)
+- ![](/assets/images/2021/01/IMG_3743.jpg)
 
 
 Затем ещё раз съездили в Прагу (потому что нашли копеечные билеты в железнодорожном вагоне первого класса). Открыли для себя маленький город [Оломоуц](https://goo.gl/maps/hc9v5pESexHtfGjz5) в Моравии, а также поделённый между Чехией и Польшей [Цешин](https://goo.gl/maps/GnYqN5Yvpf23ArhaA), границу в котором можно пересечь прямо по пешеходному мосту (экспириенс интересный, но город довольно унылый).
 
-![](/assets/images/2021/01/DSCF2753.jpg)
-
-![](/assets/images/2021/01/DSCF2656.jpg)
-
-![](/assets/images/2021/01/DSCF3459.jpg)
-
-![](/assets/images/2021/01/IMG_4006.jpg)
+- ![](/assets/images/2021/01/DSCF2753.jpg)
+- ![](/assets/images/2021/01/DSCF2656.jpg)
+- ![](/assets/images/2021/01/DSCF3459.jpg)
+- ![](/assets/images/2021/01/IMG_4006.jpg)
 
 Оломуц и Цешин — путешествия выходного дня
 
 Под конец года, когда все границы снова закрылись, нашёлся повод отведать ещё немного Польши. Встретили день моего рождения в том же горном курорте [Закопане](https://goo.gl/maps/mduqpuN29gkDjbnJ7), где начался наш 2020. Заехали в [Бельско-Бялу](https://goo.gl/maps/aYLRDeRYmY6B9awj8) (самое ушатанное место в стране соу фар) и [Катовице](https://goo.gl/maps/kDFUbjAvhXXfJSCn7) (столица заводов, хипстеров и киберспортивных турниров на западе Польши).
-![](/assets/images/2021/01/DSCF3864.jpg)
 
-![](/assets/images/2021/01/DSCF3981.jpg)
+- ![](/assets/images/2021/01/DSCF3864.jpg)
+- ![](/assets/images/2021/01/DSCF3981.jpg)
 
 Морозные Закопане и солнечная Бельско-Бяла
 
 Новый год, впервые лет за десять, отметили дома (правительство ввело комендантский час) — с салатиками и телевизором. А после отправились в [Гданьск](https://goo.gl/maps/GWs7wnXSyBRmADgP7) — город на Балтике, который внезапно стал [главным туристическим впечатлением](https://www.facebook.com/dima.afonin/posts/10224608344020752) последних лет и однозначно лучшим местом для утоления культурно-эстетической жажды во всей Польше.
 
-![](/assets/images/2021/01/DSCF4031.jpg)
-
-![](/assets/images/2021/01/DSCF4046.jpg)
+- ![](/assets/images/2021/01/DSCF4031.jpg)
+- ![](/assets/images/2021/01/DSCF4046.jpg)
 
 Хорошие улицы Гданьска
 
 Большую часть истории город кочевал от поляков к немцам, в результате чего разжился архитектурой, слабо напоминающей среднестатистическую польскую провинцию. К 1945 примерно 80% построек были срыты в ноль, но, в отличие от других городов, исторический центр восстановили очень аккуратно и почти целиком.
 
-![](/assets/images/2021/01/DSCF4063.jpg)
-
-![](/assets/images/2021/01/DSCF4225.jpg)
+- ![](/assets/images/2021/01/DSCF4063.jpg)
+- ![](/assets/images/2021/01/DSCF4225.jpg)
 
 Нехорошие улицы Гданьска
 
